--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://skit.network$1 [R,L]
+RewriteRule ^(.*)$ https://skit-site.local$1 [R,L]
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.html [L]
