--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://skit-site.local$1 [R,L]
+RewriteRule ^(.*)$ https://skit.network$1 [R,L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
